--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -117,14 +117,13 @@
     "        StructField(\"metrics_json\", StringType(), True),\n",
     "        StructField(\"params_json\", StringType(), True),\n",
     "        StructField(\"registered\", BooleanType(), True),\n",
-    "        StructField(\"registered_version\", StringType(), True),  # 🔥 FIX: Always STRING, never NULL\n",
+    "        StructField(\"registered_version\", StringType(), True),\n",
     "        StructField(\"reason\", StringType(), True)\n",
     "    ])\n",
     "\n",
     "\n",
     "# ---------------------- TABLE CREATION ----------------------\n",
     "def ensure_table_exists():\n",
-    "    \"\"\"Create table if not exists with correct schema\"\"\"\n",
     "    try:\n",
     "        spark.sql(f\"DESCRIBE TABLE {config.REGISTRATION_LOG_TABLE}\")\n",
     "        print(f\"📌 Table exists: {config.REGISTRATION_LOG_TABLE}\")\n",
@@ -140,8 +139,8 @@
     "def get_all_runs() -> List[Dict]:\n",
     "    print(\"\\n📍 Fetching experiment runs...\")\n",
     "    runs = client.search_runs(\n",
-    "        [experiment.experiment_id], \n",
-    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"], \n",
+    "        [experiment.experiment_id],\n",
+    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"],\n",
     "        max_results=500\n",
     "    )\n",
     "\n",
@@ -157,7 +156,6 @@
     "\n",
     "# ---------------------- DUPLICATE CHECK ----------------------\n",
     "def is_duplicate_model(new_model: Dict) -> bool:\n",
-    "    \"\"\"Check if model already registered\"\"\"\n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
     "        return False\n",
     "\n",
@@ -186,7 +184,6 @@
     "\n",
     "# ---------------------- CHECK IF ALREADY LOGGED ----------------------\n",
     "def is_already_logged(run_id: str) -> bool:\n",
-    "    \"\"\"Check if run_id already exists in registration log table\"\"\"\n",
     "    try:\n",
     "        existing = spark.sql(f\"\"\"\n",
     "            SELECT run_id \n",
@@ -194,7 +191,7 @@
     "            WHERE run_id = '{run_id}'\n",
     "            LIMIT 1\n",
     "        \"\"\").count()\n",
-    "        \n",
+    "\n",
     "        return existing > 0\n",
     "    except:\n",
     "        return False\n",
@@ -202,7 +199,6 @@
     "\n",
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "def register_model(model: Dict):\n",
-    "    \"\"\"Register model to Unity Catalog\"\"\"\n",
     "    if is_duplicate_model(model):\n",
     "        return None\n",
     "\n",
@@ -211,7 +207,6 @@
     "    version = reg.version\n",
     "\n",
     "    try:\n",
-    "        # Add tags\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_name\", model[\"run_name\"])\n",
     "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", config.PRIMARY_METRIC)\n",
@@ -226,16 +221,13 @@
     "\n",
     "# ---------------------- LOG DECISION ----------------------\n",
     "def log_decision(model, registered, version, reason):\n",
-    "    \"\"\"Log registration decision to Delta table\"\"\"\n",
-    "    \n",
-    "    # 🔥 FIX: Check if already logged to prevent duplicates\n",
+    "\n",
     "    if is_already_logged(model[\"run_id\"]):\n",
     "        print(f\"   ℹ️ Already logged in table, skipping duplicate entry\")\n",
     "        return\n",
-    "    \n",
-    "    # 🔥 FIX: Convert version to string, use \"N/A\" if None\n",
+    "\n",
     "    version_str = str(version) if version is not None else \"N/A\"\n",
-    "    \n",
+    "\n",
     "    record = {\n",
     "        \"timestamp\": datetime.now(),\n",
     "        \"run_id\": model[\"run_id\"],\n",
@@ -246,7 +238,7 @@
     "        \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
     "        \"params_json\": json.dumps(model[\"params\"]),\n",
     "        \"registered\": registered,\n",
-    "        \"registered_version\": version_str,  # 🔥 Always string, never None\n",
+    "        \"registered_version\": version_str,\n",
     "        \"reason\": reason\n",
     "    }\n",
     "\n",
@@ -264,7 +256,6 @@
     "def main():\n",
     "    print(\"\\n🚀 Starting Model Registration Pipeline...\\n\")\n",
     "\n",
-    "    # Ensure table exists with correct schema\n",
     "    ensure_table_exists()\n",
     "\n",
     "    runs = get_all_runs()\n",
@@ -274,14 +265,13 @@
     "\n",
     "    registered_count = 0\n",
     "    skipped_count = 0\n",
-    "    processed_run_ids = set()  # 🔥 Track processed runs to avoid duplicates\n",
+    "    processed_run_ids = set()\n",
     "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "        \n",
-    "        # 🔥 Skip if already processed in this execution\n",
+    "\n",
     "        if model['run_id'] in processed_run_ids:\n",
     "            continue\n",
-    "        \n",
+    "\n",
     "        processed_run_ids.add(model['run_id'])\n",
     "\n",
     "        print(f\"\\n{'='*80}\")\n",
@@ -289,12 +279,13 @@
     "        print(f\"   Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
     "        print(f\"{'='*80}\")\n",
     "\n",
-    "        # Check if already logged to prevent duplicate entries\n",
+    "        # -------- FIXED BLOCK --------\n",
     "        if is_already_logged(model['run_id']):\n",
-    "            print(f\"   ℹ️ Already logged in previous run, skipping...\")\n",
+    "            print(f\"   ⏭ Skipped — Already processed earlier (Run ID: {model['run_id']})\")\n",
     "            continue\n",
     "\n",
     "        version = register_model(model)\n",
+    "        # -------- FIXED BLOCK END ----\n",
     "\n",
     "        if version:\n",
     "            log_decision(model, True, version, \"✔ Registered successfully\")\n",
@@ -318,7 +309,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   }
  ],
