update: dev notebooks, pipeline config and job creation script

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,18 +11,23 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK CLASSIFICATION TRAINING - FINAL COMPATIBLE VERSION\n",
+    "# 🚀 CREDIT RISK TRAINING - MULTI MODEL SUPPORT\n",
     "\n",
-    "%pip install scikit-learn pyyaml\n",
+    "%pip install scikit-learn pyyaml xgboost\n",
     "\n",
     "import mlflow\n",
     "import time\n",
     "import yaml\n",
+    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
     "from datetime import datetime\n",
+    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
@@ -36,16 +41,39 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🚀 CREDIT RISK CLASSIFICATION - CONFIG DRIVEN TRAINING\")\n",
+    "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")  # ✅ CHANGED: Multi Model\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# 1️⃣ Load pipeline config (pipeline_config.yml)\n",
-    "# -----------------------------------------\n",
+    "# ==========================================\n",
+    "# 🔥 LOAD BOTH CONFIG FILES\n",
+    "# ==========================================\n",
+    "\n",
+    "print(\"\\n📋 Loading configuration files...\")\n",
+    "\n",
+    "# Load pipeline config (thresholds, tables, settings)\n",
     "with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "    pipeline_cfg = yaml.safe_load(f)\n",
     "\n",
-    "MODEL_TYPE = pipeline_cfg[\"model\"][\"type\"]\n",
+    "# Load experiments config (model parameters)  # ✅ NEW: Load experiments config\n",
+    "with open(\"experiments_config.yml\", \"r\") as f:\n",
+    "    experiments_cfg = yaml.safe_load(f)\n",
+    "\n",
+    "print(\"✅ Configs loaded successfully\")\n",
+    "\n",
+    "# ==========================================\n",
+    "# 🔥 GET MODELS TO TRAIN FROM GIT VARIABLE\n",
+    "# ==========================================\n",
+    "\n",
+    "# This reads: MODELS_TO_TRAIN=random_forest,xgboost\n",
+    "MODELS_TO_TRAIN = pipeline_cfg[\"models\"][\"enabled\"].split(\",\")  # ✅ NEW: Get from Git variable\n",
+    "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN]\n",
+    "\n",
+    "print(f\"\\n✅ Models to train: {MODELS_TO_TRAIN}\")\n",
+    "\n",
+    "# ==========================================\n",
+    "# 1️⃣ Extract Pipeline Settings (SAME AS BEFORE)\n",
+    "# ==========================================\n",
+    "\n",
     "EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
     "MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
     "RAW_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
@@ -53,52 +81,36 @@
     "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
     "\n",
-    "print(\"✅ Pipeline config loaded.\")\n",
+    "# ==========================================\n",
+    "# 2️⃣ Load Raw Data (SAME AS BEFORE)\n",
+    "# ==========================================\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# 2️⃣ Load experiment config (config.yml)\n",
-    "# -----------------------------------------\n",
-    "with open(\"config.yml\", \"r\") as f:\n",
-    "    experiment_cfg = yaml.safe_load(f)\n",
-    "\n",
-    "EXPERIMENT_LIST = experiment_cfg[\"experiments\"]\n",
-    "print(f\"🔍 Loaded {len(EXPERIMENT_LIST)} experiment variations.\")\n",
-    "\n",
-    "# -----------------------------------------\n",
-    "# 3️⃣ Load Raw Data (with Label Encoding)\n",
-    "# -----------------------------------------\n",
     "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
-    "\n",
-    "print(f\"📦 Loading RAW data → {RAW_INPUT_TABLE}\")\n",
     "df = spark.read.table(RAW_INPUT_TABLE).toPandas()\n",
     "\n",
     "X = df[FEATURES]\n",
     "y = df[LABEL_COL]\n",
     "\n",
-    "# Label conversion\n",
     "if y.dtype == \"object\":\n",
     "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# 4️⃣ Setup Preprocessing Pipeline\n",
-    "# -----------------------------------------\n",
-    "categorical_cols = [col for col in X.columns if X[col].dtype == \"object\"]\n",
-    "numeric_cols = [col for col in X.columns if col not in categorical_cols]\n",
+    "# ==========================================\n",
+    "# 3️⃣ Preprocessing (SAME AS BEFORE)\n",
+    "# ==========================================\n",
+    "\n",
+    "categorical_cols = [c for c in X.columns if X[c].dtype == \"object\"]\n",
+    "numeric_cols = [c for c in X.columns if c not in categorical_cols]\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"categorical\", OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False), categorical_cols),\n",
     "        (\"numeric\", StandardScaler(), numeric_cols)\n",
-    "    ],\n",
-    "    remainder='passthrough'\n",
+    "    ]\n",
     ")\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# 5️⃣ Setup MLflow Tracking\n",
-    "# -----------------------------------------\n",
-    "mlflow.set_tracking_uri(\"databricks\")\n",
-    "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
+    "# ==========================================\n",
+    "# 4️⃣ Train-Test Split (SAME AS BEFORE)\n",
+    "# ==========================================\n",
     "\n",
     "stratify_option = y if pipeline_cfg[\"data\"][\"split\"][\"stratify\"] else None\n",
     "\n",
@@ -109,86 +121,128 @@
     "    random_state=pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     ")\n",
     "\n",
-    "results = []\n",
+    "# ==========================================\n",
+    "# 5️⃣ MLflow Setup (SAME AS BEFORE)\n",
+    "# ==========================================\n",
     "\n",
-    "# -----------------------------------------\n",
-    "# 6️⃣ Run All Experiments (With all metrics)\n",
-    "# -----------------------------------------\n",
+    "mlflow.set_tracking_uri(\"databricks\")\n",
+    "mlflow.set_registry_uri(\"databricks-uc\")\n",
+    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
     "\n",
-    "for exp in EXPERIMENT_LIST:\n",
+    "# ==========================================\n",
+    "# 🔥 MODEL CLASS MAPPING\n",
+    "# ==========================================\n",
+    "\n",
+    "MODEL_CLASSES = {  # ✅ NEW: Mapping dictionary\n",
+    "    \"random_forest\": RandomForestClassifier,\n",
+    "    \"xgboost\": XGBClassifier,\n",
+    "    \"logistic_regression\": LogisticRegression\n",
+    "}\n",
+    "\n",
+    "# ==========================================\n",
+    "# 6️⃣ TRAIN EACH MODEL TYPE (MAIN LOOP)\n",
+    "# ==========================================\n",
+    "\n",
+    "# ✅ NEW: Loop through multiple models instead of single MODEL_TYPE\n",
+    "for MODEL_TYPE in MODELS_TO_TRAIN:\n",
     "    \n",
-    "    exp_name = f\"{RUN_NAME_PREFIX}_{exp['name']}\"\n",
-    "    params = exp[\"params\"].copy()\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"🚀 Training Model: {MODEL_TYPE.upper()}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # Check if model type is supported\n",
+    "    if MODEL_TYPE not in MODEL_CLASSES:\n",
+    "        print(f\"❌ Unsupported model type: {MODEL_TYPE}\")\n",
+    "        continue\n",
+    "    \n",
+    "    # ✅ CHANGED: Load from experiments_config.yml instead of separate files\n",
+    "    if MODEL_TYPE not in experiments_cfg[\"models\"]:\n",
+    "        print(f\"❌ No experiments found for {MODEL_TYPE} in experiments_config.yml\")\n",
+    "        continue\n",
+    "    \n",
+    "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
+    "    \n",
+    "    # ✅ CHANGED: Get experiments from experiments_cfg\n",
+    "    model_config = experiments_cfg[\"models\"][MODEL_TYPE]\n",
+    "    EXPERIMENT_LIST = model_config[\"experiments\"]\n",
+    "    \n",
+    "    print(f\"🔍 Running {len(EXPERIMENT_LIST)} experiments for {MODEL_TYPE}\")\n",
     "\n",
-    "    config_random_state = params.pop(\"random_state\", 42)\n",
+    "    # ==========================================\n",
+    "    # 7️⃣ Train All Experiments (SAME AS BEFORE)\n",
+    "    # ==========================================\n",
     "\n",
-    "    rf_model = RandomForestClassifier(random_state=config_random_state, **params)\n",
+    "    for exp in EXPERIMENT_LIST:\n",
+    "        exp_name = f\"{RUN_NAME_PREFIX}_{MODEL_TYPE}_{exp['name']}\"\n",
+    "        params = exp[\"params\"].copy()\n",
     "\n",
-    "    full_pipeline = Pipeline([\n",
-    "        (\"preprocessing\", preprocessor),\n",
-    "        (\"model\", rf_model)\n",
-    "    ])\n",
+    "        with mlflow.start_run(run_name=exp_name):\n",
+    "            \n",
+    "            model = ModelClass(**params)\n",
+    "            \n",
+    "            pipeline = Pipeline([\n",
+    "                (\"preprocessing\", preprocessor),\n",
+    "                (\"model\", model)\n",
+    "            ])\n",
     "\n",
-    "    with mlflow.start_run(run_name=exp_name):\n",
+    "            # Training\n",
+    "            start = time.time()\n",
+    "            pipeline.fit(X_train, y_train)\n",
+    "            train_time = round(time.time() - start, 4)\n",
     "\n",
-    "        # ⏱ TRAIN TIME\n",
-    "        train_start = time.time()\n",
-    "        full_pipeline.fit(X_train, y_train)\n",
-    "        train_time_sec = round(time.time() - train_start, 4)\n",
+    "            train_pred = pipeline.predict(X_train)\n",
+    "            train_accuracy = accuracy_score(y_train, train_pred)\n",
     "\n",
-    "        # Training accuracy\n",
-    "        train_pred = full_pipeline.predict(X_train)\n",
-    "        train_accuracy = accuracy_score(y_train, train_pred)\n",
+    "            # Inference\n",
+    "            start_inf = time.time()\n",
+    "            y_pred = pipeline.predict(X_test)\n",
+    "            inference_time = round(time.time() - start_inf, 4)\n",
     "\n",
-    "        # 🔍 TEST predictions\n",
-    "        inf_start = time.time()\n",
-    "        y_pred = full_pipeline.predict(X_test)\n",
-    "        inference_time_sec = round(time.time() - inf_start, 4)\n",
+    "            y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "        y_proba = full_pipeline.predict_proba(X_test)[:, 1]\n",
+    "            # Metrics\n",
+    "            metrics = {\n",
+    "                \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
+    "                \"test_precision\": precision_score(y_test, y_pred),\n",
+    "                \"test_recall\": recall_score(y_test, y_pred),\n",
+    "                \"test_f1\": f1_score(y_test, y_pred),\n",
+    "                \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
+    "                \"train_accuracy\": train_accuracy,\n",
+    "                \"train_time\": train_time,\n",
+    "                \"inference_time\": inference_time\n",
+    "            }\n",
     "\n",
-    "        metrics = {\n",
-    "            \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
-    "            \"test_precision\": precision_score(y_test, y_pred),\n",
-    "            \"test_recall\": recall_score(y_test, y_pred),\n",
-    "            \"test_f1\": f1_score(y_test, y_pred),\n",
-    "            \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
+    "            # Log to MLflow\n",
+    "            for k, v in metrics.items():\n",
+    "                mlflow.log_metric(k, v)\n",
     "\n",
-    "            # NEW metrics from config.yml\n",
-    "            \"train_accuracy\": train_accuracy,\n",
-    "            \"train_time\": train_time_sec,\n",
-    "            \"inference_time\": inference_time_sec\n",
-    "        }\n",
+    "            mlflow.log_params(params)\n",
+    "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
     "\n",
-    "        # Log metrics\n",
-    "        for k, v in metrics.items():\n",
-    "            mlflow.log_metric(k, v)\n",
+    "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
-    "        # Log model hyperparameters\n",
-    "        mlflow.log_params(params)\n",
-    "        mlflow.log_param(\"random_state\", config_random_state)\n",
+    "            mlflow.sklearn.log_model(\n",
+    "                pipeline,\n",
+    "                artifact_path=MODEL_ARTIFACT_PATH,\n",
+    "                signature=signature,\n",
+    "                input_example=X_train.head(5)\n",
+    "            )\n",
     "\n",
-    "        # Log model with preprocessing\n",
-    "        signature = infer_signature(X_train, full_pipeline.predict(X_train))\n",
+    "            print(f\"   ✅ {exp_name} completed\")\n",
     "\n",
-    "        mlflow.sklearn.log_model(\n",
-    "            sk_model=full_pipeline,\n",
-    "            artifact_path=MODEL_ARTIFACT_PATH,\n",
-    "            signature=signature,\n",
-    "            input_example=X_train.head(5)\n",
-    "        )\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"🎉 {MODEL_TYPE.upper()} TRAINING COMPLETED!\")\n",
+    "    print(f\"{'='*80}\")\n",
     "\n",
-    "        print(f\"   ✅ {exp_name} logged successfully with metrics: {metrics}\")\n",
+    "# ==========================================\n",
+    "# 🎉 FINAL SUMMARY\n",
+    "# ==========================================\n",
     "\n",
-    "        results.append((exp_name, metrics))\n",
-    "\n",
-    "# -----------------------------------------\n",
-    "# 7️⃣ Summary\n",
-    "# -----------------------------------------\n",
     "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"🎉 TRAINING COMPLETED SUCCESSFULLY!\")\n",
+    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n",
     "print(\"=\" * 80)\n",
-    "\n"
+    "print(f\"✅ Trained models: {', '.join(MODELS_TO_TRAIN)}\")\n",
+    "print(\"=\" * 80)"
    ]
   }
  ],
