--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -19,6 +19,7 @@
     "import json\n",
     "import yaml\n",
     "import sys\n",
+    "import os  # ✅ REQUIRED: for Git / Env variables\n",
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import StructType, StructField, StringType, DoubleType, TimestampType\n",
@@ -37,7 +38,7 @@
     "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
     "    \n",
-    "    # ✅ NEW: Load experiments config (for reference if needed)\n",
+    "    # Load experiments config (for reference if needed)\n",
     "    with open(\"experiments_config.yml\", \"r\") as f:\n",
     "        experiments_cfg = yaml.safe_load(f)\n",
     "    \n",
@@ -46,11 +47,21 @@
     "    print(f\"❌ Error loading config: {e}\")\n",
     "    sys.exit(1)\n",
     "\n",
-    "# ✅ CHANGED: Parse comma-separated model types from Git variable\n",
-    "MODEL_TYPES_RAW = pipeline_cfg[\"models\"][\"enabled\"]\n",
-    "MODEL_TYPES = [m.strip() for m in MODEL_TYPES_RAW.split(\",\")]  # Split and clean\n",
+    "# =========================\n",
+    "# 🔥 FIXED SECTION (ONLY CHANGE)\n",
+    "# =========================\n",
+    "# Read models directly from Git / Env variable\n",
+    "MODEL_TYPES_ENV = os.getenv(\"MODELS_TO_TRAIN\")\n",
+    "\n",
+    "if not MODEL_TYPES_ENV:\n",
+    "    raise ValueError(\"❌ MODELS_TO_TRAIN Git variable is not set\")\n",
+    "\n",
+    "MODEL_TYPES = [m.strip() for m in MODEL_TYPES_ENV.split(\",\")]\n",
     "\n",
     "print(f\"📋 Models to evaluate: {MODEL_TYPES}\\n\")\n",
+    "# =========================\n",
+    "# 🔥 FIX ENDS HERE\n",
+    "# =========================\n",
     "\n",
     "UC_CATALOG = pipeline_cfg[\"models\"][\"catalog\"]\n",
     "UC_SCHEMA = pipeline_cfg[\"models\"][\"schema\"]\n",
@@ -92,7 +103,7 @@
     "        StructField(\"timestamp\", TimestampType(), True),\n",
     "        StructField(\"run_id\", StringType(), True),\n",
     "        StructField(\"run_name\", StringType(), True),\n",
-    "        StructField(\"model_type\", StringType(), True),  # ✅ NEW: Track model type explicitly\n",
+    "        StructField(\"model_type\", StringType(), True),\n",
     "        StructField(\"model_name\", StringType(), True),\n",
     "        StructField(\"primary_metric\", StringType(), True),\n",
     "        StructField(\"primary_metric_value\", DoubleType(), True),\n",
@@ -131,10 +142,6 @@
     "# FETCH RUNS (MODEL-WISE)\n",
     "# -------------------------\n",
     "def get_runs_for_model(model_type):\n",
-    "    \"\"\"\n",
-    "    Fetch runs for a specific model type from MLflow.\n",
-    "    Uses run_name pattern matching to filter by model_type.\n",
-    "    \"\"\"\n",
     "    order = f\"metrics.{PRIMARY_METRIC} {'DESC' if DIRECTION=='maximize' else 'ASC'}\"\n",
     "\n",
     "    runs = client.search_runs(\n",
@@ -143,9 +150,6 @@
     "        max_results=500\n",
     "    )\n",
     "\n",
-    "    # 🔥 FILTER ONLY THIS MODEL TYPE\n",
-    "    # Training script creates run names like: credit_risk_random_forest_rf_baseline_balanced\n",
-    "    # So we check if model_type is in the run_name\n",
     "    filtered_runs = [\n",
     "        run for run in runs\n",
     "        if model_type in (run.info.run_name or \"\")\n",
@@ -158,19 +162,11 @@
     "# MAIN EVALUATION LOOP\n",
     "# -------------------------\n",
     "def main():\n",
-    "    \"\"\"\n",
-    "    Main evaluation logic:\n",
-    "    1. For each model type (from Git variable)\n",
-    "    2. Fetch all runs for that model\n",
-    "    3. Keep only best run per unique experiment name\n",
-    "    4. Log new runs to evaluation table\n",
-    "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    ensure_table_exists()\n",
     "    existing_run_names = get_existing_run_names()\n",
-    "\n",
     "    all_records = []\n",
-    "    \n",
+    "\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"🚀 STARTING EVALUATION FOR ALL MODEL TYPES\")\n",
     "    print(\"=\"*80)\n",
@@ -180,7 +176,6 @@
     "        print(f\"\\n📊 Evaluating model type: {model_type.upper()}\")\n",
     "        print(\"-\" * 80)\n",
     "\n",
-    "        # Generate full model name for UC registry\n",
     "        model_name = NAMING_FMT.format(\n",
     "            catalog=UC_CATALOG,\n",
     "            schema=UC_SCHEMA,\n",
@@ -190,30 +185,24 @@
     "        \n",
     "        print(f\"   📦 Model Name: {model_name}\")\n",
     "\n",
-    "        # Fetch all runs for this model type\n",
     "        runs = get_runs_for_model(model_type)\n",
     "\n",
     "        if not runs:\n",
     "            print(f\"   ⚠️  No runs found for {model_type}\")\n",
     "            continue\n",
     "\n",
-    "        # Dictionary to store best run per experiment name\n",
     "        run_dict = {}\n",
     "\n",
     "        for run in runs:\n",
     "            run_name = run.info.run_name or \"unnamed_run\"\n",
     "\n",
-    "            # Skip if already logged\n",
     "            if run_name in existing_run_names:\n",
     "                continue\n",
     "\n",
-    "            # Get primary metric value\n",
     "            pm_val = run.data.metrics.get(PRIMARY_METRIC)\n",
-    "            \n",
     "            if pm_val is None:\n",
     "                continue\n",
     "\n",
-    "            # Keep only best run per experiment name\n",
     "            if run_name not in run_dict or (\n",
     "                DIRECTION == \"maximize\" and pm_val > run_dict[run_name][\"primary_metric\"]\n",
     "            ):\n",
@@ -230,13 +219,12 @@
     "                    \"model_uri\": f\"runs:/{run.info.run_id}/{ARTIFACT_PATH}\"\n",
     "                }\n",
     "\n",
-    "        # Convert to records for DataFrame\n",
     "        for r in run_dict.values():\n",
     "            all_records.append({\n",
     "                \"timestamp\": datetime.now(),\n",
     "                \"run_id\": r[\"run_id\"],\n",
     "                \"run_name\": r[\"run_name\"],\n",
-    "                \"model_type\": model_type,  # ✅ NEW: Add model type\n",
+    "                \"model_type\": model_type,\n",
     "                \"model_name\": model_name,\n",
     "                \"primary_metric\": PRIMARY_METRIC,\n",
     "                \"primary_metric_value\": float(r[\"primary_metric\"]) if r[\"primary_metric\"] else 0.0,\n",
@@ -247,10 +235,6 @@
     "        \n",
     "        print(f\"   ✅ Found {len(run_dict)} new unique experiments for {model_type}\")\n",
     "\n",
-    "    # -------------------------\n",
-    "    # SAVE TO DELTA TABLE\n",
-    "    # -------------------------\n",
-    "    \n",
     "    if not all_records:\n",
     "        print(\"\\n\" + \"=\"*80)\n",
     "        print(\"✅ No new experiments to log (all runs already evaluated)\")\n",
@@ -263,26 +247,24 @@
     "\n",
     "    df = pd.DataFrame(all_records)\n",
     "    spark_df = spark.createDataFrame(df, schema=get_evaluation_table_schema())\n",
-    "\n",
     "    spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(EVALUATION_LOG_TABLE)\n",
     "\n",
     "    print(f\"\\n✅ Successfully logged {len(all_records)} new evaluated experiments\")\n",
     "    print(f\"📊 Table: {EVALUATION_LOG_TABLE}\")\n",
-    "    \n",
-    "    # Show summary by model type\n",
+    "\n",
     "    print(\"\\n📋 Summary by Model Type:\")\n",
     "    print(\"-\" * 80)\n",
     "    for model_type in MODEL_TYPES:\n",
     "        count = sum(1 for r in all_records if r[\"model_type\"] == model_type)\n",
     "        if count > 0:\n",
     "            print(f\"   {model_type}: {count} experiments\")\n",
-    "    \n",
+    "\n",
     "    print(\"=\" * 80)\n",
     "    print(\"🎉 EVALUATION COMPLETED SUCCESSFULLY!\")\n",
     "    print(\"=\" * 80)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   }
  ],
