--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -17,6 +17,7 @@
     "from mlflow.tracking import MlflowClient\n",
     "import sys\n",
     "import yaml\n",
+    "import os\n",
     "import json\n",
     "import requests\n",
     "from typing import Dict, Optional, List\n",
@@ -366,10 +367,14 @@
     "    \"\"\"\n",
     "    print(\"\\n🚀 Starting Multi-Model Registration Pipeline...\\n\")\n",
     "    \n",
-    "    # ✅ CHANGED: Parse model types from Git variable\n",
-    "    MODEL_TYPES_RAW = pipeline_cfg[\"models\"][\"enabled\"]\n",
-    "    MODEL_TYPES = [m.strip() for m in MODEL_TYPES_RAW.split(\",\")]\n",
-    "    \n",
+    "    # ✅ Parse model types from Git variable\n",
+    "    MODEL_TYPES_ENV = os.getenv(\"MODELS_TO_TRAIN\")\n",
+    "\n",
+    "    if not MODEL_TYPES_ENV:\n",
+    "        raise ValueError(\"❌ MODELS_TO_TRAIN Git variable is not set\")\n",
+    "\n",
+    "    MODEL_TYPES = [m.strip() for m in MODEL_TYPES_ENV.split(\",\")]\n",
+    "\n",
     "    print(f\"📋 Models to register: {MODEL_TYPES}\\n\")\n",
     "    \n",
     "    # Initialize Slack notifier\n",
@@ -424,7 +429,6 @@
     "    print(f\"   📊 Total Processed: {total_stats['total']}\")\n",
     "    print(f\"   📦 Registration Log: {pipeline_cfg['tables']['registration_log']}\")\n",
     "    print(\"=\"*80)\n",
-    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
