--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -19,6 +19,7 @@
     "import time\n",
     "import yaml\n",
     "import sys\n",
+    "import os  # ✅ NEW: required for Git / Env variables\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
@@ -41,7 +42,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")  # ✅ CHANGED: Multi Model\n",
+    "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# ==========================================\n",
@@ -50,23 +51,24 @@
     "\n",
     "print(\"\\n📋 Loading configuration files...\")\n",
     "\n",
-    "# Load pipeline config (thresholds, tables, settings)\n",
     "with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "    pipeline_cfg = yaml.safe_load(f)\n",
     "\n",
-    "# Load experiments config (model parameters)  # ✅ NEW: Load experiments config\n",
     "with open(\"experiments_config.yml\", \"r\") as f:\n",
     "    experiments_cfg = yaml.safe_load(f)\n",
     "\n",
     "print(\"✅ Configs loaded successfully\")\n",
     "\n",
     "# ==========================================\n",
-    "# 🔥 GET MODELS TO TRAIN FROM GIT VARIABLE\n",
+    "# 🔥 GET MODELS TO TRAIN FROM GIT VARIABLE (FIXED)\n",
     "# ==========================================\n",
     "\n",
-    "# This reads: MODELS_TO_TRAIN=random_forest,xgboost\n",
-    "MODELS_TO_TRAIN = pipeline_cfg[\"models\"][\"enabled\"].split(\",\")  # ✅ NEW: Get from Git variable\n",
-    "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN]\n",
+    "MODELS_TO_TRAIN_ENV = os.getenv(\"MODELS_TO_TRAIN\")\n",
+    "\n",
+    "if not MODELS_TO_TRAIN_ENV:\n",
+    "    raise ValueError(\"❌ MODELS_TO_TRAIN Git variable is not set\")\n",
+    "\n",
+    "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN_ENV.split(\",\")]\n",
     "\n",
     "print(f\"\\n✅ Models to train: {MODELS_TO_TRAIN}\")\n",
     "\n",
@@ -133,7 +135,7 @@
     "# 🔥 MODEL CLASS MAPPING\n",
     "# ==========================================\n",
     "\n",
-    "MODEL_CLASSES = {  # ✅ NEW: Mapping dictionary\n",
+    "MODEL_CLASSES = {\n",
     "    \"random_forest\": RandomForestClassifier,\n",
     "    \"xgboost\": XGBClassifier,\n",
     "    \"logistic_regression\": LogisticRegression\n",
@@ -143,49 +145,39 @@
     "# 6️⃣ TRAIN EACH MODEL TYPE (MAIN LOOP)\n",
     "# ==========================================\n",
     "\n",
-    "# ✅ NEW: Loop through multiple models instead of single MODEL_TYPE\n",
     "for MODEL_TYPE in MODELS_TO_TRAIN:\n",
-    "    \n",
+    "\n",
     "    print(f\"\\n{'='*80}\")\n",
     "    print(f\"🚀 Training Model: {MODEL_TYPE.upper()}\")\n",
     "    print(f\"{'='*80}\")\n",
-    "    \n",
-    "    # Check if model type is supported\n",
+    "\n",
     "    if MODEL_TYPE not in MODEL_CLASSES:\n",
     "        print(f\"❌ Unsupported model type: {MODEL_TYPE}\")\n",
     "        continue\n",
-    "    \n",
-    "    # ✅ CHANGED: Load from experiments_config.yml instead of separate files\n",
+    "\n",
     "    if MODEL_TYPE not in experiments_cfg[\"models\"]:\n",
     "        print(f\"❌ No experiments found for {MODEL_TYPE} in experiments_config.yml\")\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
-    "    \n",
-    "    # ✅ CHANGED: Get experiments from experiments_cfg\n",
     "    model_config = experiments_cfg[\"models\"][MODEL_TYPE]\n",
     "    EXPERIMENT_LIST = model_config[\"experiments\"]\n",
-    "    \n",
-    "    print(f\"🔍 Running {len(EXPERIMENT_LIST)} experiments for {MODEL_TYPE}\")\n",
     "\n",
-    "    # ==========================================\n",
-    "    # 7️⃣ Train All Experiments (SAME AS BEFORE)\n",
-    "    # ==========================================\n",
+    "    print(f\"🔍 Running {len(EXPERIMENT_LIST)} experiments for {MODEL_TYPE}\")\n",
     "\n",
     "    for exp in EXPERIMENT_LIST:\n",
     "        exp_name = f\"{RUN_NAME_PREFIX}_{MODEL_TYPE}_{exp['name']}\"\n",
     "        params = exp[\"params\"].copy()\n",
     "\n",
     "        with mlflow.start_run(run_name=exp_name):\n",
-    "            \n",
+    "\n",
     "            model = ModelClass(**params)\n",
-    "            \n",
+    "\n",
     "            pipeline = Pipeline([\n",
     "                (\"preprocessing\", preprocessor),\n",
     "                (\"model\", model)\n",
     "            ])\n",
     "\n",
-    "            # Training\n",
     "            start = time.time()\n",
     "            pipeline.fit(X_train, y_train)\n",
     "            train_time = round(time.time() - start, 4)\n",
@@ -193,14 +185,12 @@
     "            train_pred = pipeline.predict(X_train)\n",
     "            train_accuracy = accuracy_score(y_train, train_pred)\n",
     "\n",
-    "            # Inference\n",
     "            start_inf = time.time()\n",
     "            y_pred = pipeline.predict(X_test)\n",
     "            inference_time = round(time.time() - start_inf, 4)\n",
     "\n",
     "            y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "            # Metrics\n",
     "            metrics = {\n",
     "                \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
     "                \"test_precision\": precision_score(y_test, y_pred),\n",
@@ -212,7 +202,6 @@
     "                \"inference_time\": inference_time\n",
     "            }\n",
     "\n",
-    "            # Log to MLflow\n",
     "            for k, v in metrics.items():\n",
     "                mlflow.log_metric(k, v)\n",
     "\n",
@@ -242,7 +231,7 @@
     "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n",
     "print(\"=\" * 80)\n",
     "print(f\"✅ Trained models: {', '.join(MODELS_TO_TRAIN)}\")\n",
-    "print(\"=\" * 80)"
+    "print(\"=\" * 80)\n"
    ]
   }
  ],
