--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -60,13 +60,16 @@
     "print(\"✅ Configs loaded successfully\")\n",
     "\n",
     "# ==========================================\n",
-    "# 🔥 GET MODELS TO TRAIN FROM GIT VARIABLE (FIXED)\n",
+    "# 🔥 GET MODELS TO TRAIN (Databricks Job Safe)\n",
     "# ==========================================\n",
     "\n",
-    "MODELS_TO_TRAIN_ENV = os.getenv(\"MODELS_TO_TRAIN\")\n",
+    "try:\n",
+    "    MODELS_TO_TRAIN_ENV = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
+    "except:\n",
+    "    MODELS_TO_TRAIN_ENV = None\n",
     "\n",
     "if not MODELS_TO_TRAIN_ENV:\n",
-    "    raise ValueError(\"❌ MODELS_TO_TRAIN Git variable is not set\")\n",
+    "    raise ValueError(\"❌ MODELS_TO_TRAIN job parameter is not set\")\n",
     "\n",
     "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN_ENV.split(\",\")]\n",
     "\n",
