--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "# 🚀 CREDIT RISK TRAINING - MULTI MODEL SUPPORT\n",
+    "### TRAINING_script\n",
     "\n",
     "%pip install scikit-learn pyyaml xgboost\n",
     "\n",
@@ -19,7 +19,7 @@
     "import time\n",
     "import yaml\n",
     "import sys\n",
-    "import os  # ✅ NEW: required for Git / Env variables\n",
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
@@ -45,11 +45,7 @@
     "print(\"🚀 CREDIT RISK TRAINING - MULTI MODEL MODE\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "# ==========================================\n",
-    "# 🔥 LOAD BOTH CONFIG FILES\n",
-    "# ==========================================\n",
-    "\n",
-    "print(\"\\n📋 Loading configuration files...\")\n",
+    "# 🔥 LOAD CONFIG FILES\n",
     "\n",
     "with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "    pipeline_cfg = yaml.safe_load(f)\n",
@@ -57,11 +53,7 @@
     "with open(\"experiments_config.yml\", \"r\") as f:\n",
     "    experiments_cfg = yaml.safe_load(f)\n",
     "\n",
-    "print(\"✅ Configs loaded successfully\")\n",
-    "\n",
-    "# ==========================================\n",
-    "# 🔥 GET MODELS TO TRAIN (Databricks Job Safe)\n",
-    "# ==========================================\n",
+    "# 🔥 GET MODELS TO TRAIN (Git / Job Variable)\n",
     "\n",
     "try:\n",
     "    MODELS_TO_TRAIN_ENV = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
@@ -73,22 +65,36 @@
     "\n",
     "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN_ENV.split(\",\")]\n",
     "\n",
-    "print(f\"\\n✅ Models to train: {MODELS_TO_TRAIN}\")\n",
+    "# 🔥 EXPERIMENT NAME HELPER\n",
     "\n",
-    "# ==========================================\n",
-    "# 1️⃣ Extract Pipeline Settings (SAME AS BEFORE)\n",
-    "# ==========================================\n",
+    "def get_experiment_name_for_model(model_type, base_experiment_name):\n",
+    "    model_abbrev_map = {\n",
+    "        \"random_forest\": \"RF\",\n",
+    "        \"xgboost\": \"XGB\",\n",
+    "        \"logistic_regression\": \"LR\"\n",
+    "    }\n",
     "\n",
-    "EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
+    "    if \"/\" in base_experiment_name:\n",
+    "        path, base = base_experiment_name.rsplit(\"/\", 1)\n",
+    "        base = base.replace(\"_ML_Experiments\", \"\").replace(\"_Experiments\", \"\")\n",
+    "        parent = f\"{path}/{base}_Experiments\"\n",
+    "    else:\n",
+    "        base = base_experiment_name.replace(\"_ML_Experiments\", \"\").replace(\"_Experiments\", \"\")\n",
+    "        parent = f\"{base}_Experiments\"\n",
+    "\n",
+    "    abbrev = model_abbrev_map.get(model_type, model_type[:3].upper())\n",
+    "    return f\"{parent}/{abbrev}_Experiments\"\n",
+    "\n",
+    "# 🔥 PIPELINE SETTINGS\n",
+    "\n",
+    "BASE_EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
     "MODEL_ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
     "RAW_INPUT_TABLE = pipeline_cfg[\"data\"][\"input_table\"]\n",
     "FEATURES = pipeline_cfg[\"data\"][\"features\"]\n",
     "LABEL_COL = pipeline_cfg[\"data\"][\"label\"]\n",
     "RUN_NAME_PREFIX = pipeline_cfg[\"experiment\"][\"run_name_prefix\"]\n",
     "\n",
-    "# ==========================================\n",
-    "# 2️⃣ Load Raw Data (SAME AS BEFORE)\n",
-    "# ==========================================\n",
+    "# 🔥 LOAD DATA\n",
     "\n",
     "spark = SparkSession.builder.appName(\"CreditRiskTraining\").getOrCreate()\n",
     "df = spark.read.table(RAW_INPUT_TABLE).toPandas()\n",
@@ -99,9 +105,7 @@
     "if y.dtype == \"object\":\n",
     "    y = y.map({\"yes\": 1, \"no\": 0}).astype(int)\n",
     "\n",
-    "# ==========================================\n",
-    "# 3️⃣ Preprocessing (SAME AS BEFORE)\n",
-    "# ==========================================\n",
+    "# 🔥 PREPROCESSING\n",
     "\n",
     "categorical_cols = [c for c in X.columns if X[c].dtype == \"object\"]\n",
     "numeric_cols = [c for c in X.columns if c not in categorical_cols]\n",
@@ -113,9 +117,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# ==========================================\n",
-    "# 4️⃣ Train-Test Split (SAME AS BEFORE)\n",
-    "# ==========================================\n",
+    "# 🔥 TRAIN-TEST SPLIT\n",
     "\n",
     "stratify_option = y if pipeline_cfg[\"data\"][\"split\"][\"stratify\"] else None\n",
     "\n",
@@ -126,17 +128,10 @@
     "    random_state=pipeline_cfg[\"data\"][\"split\"][\"random_state\"]\n",
     ")\n",
     "\n",
-    "# ==========================================\n",
-    "# 5️⃣ MLflow Setup (SAME AS BEFORE)\n",
-    "# ==========================================\n",
+    "# 🔥 MLflow SETUP\n",
     "\n",
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
-    "mlflow.set_experiment(EXPERIMENT_NAME)\n",
-    "\n",
-    "# ==========================================\n",
-    "# 🔥 MODEL CLASS MAPPING\n",
-    "# ==========================================\n",
     "\n",
     "MODEL_CLASSES = {\n",
     "    \"random_forest\": RandomForestClassifier,\n",
@@ -144,31 +139,24 @@
     "    \"logistic_regression\": LogisticRegression\n",
     "}\n",
     "\n",
-    "# ==========================================\n",
-    "# 6️⃣ TRAIN EACH MODEL TYPE (MAIN LOOP)\n",
-    "# ==========================================\n",
+    "# 🔥 TRAIN LOOP\n",
     "\n",
     "for MODEL_TYPE in MODELS_TO_TRAIN:\n",
     "\n",
-    "    print(f\"\\n{'='*80}\")\n",
-    "    print(f\"🚀 Training Model: {MODEL_TYPE.upper()}\")\n",
-    "    print(f\"{'='*80}\")\n",
-    "\n",
     "    if MODEL_TYPE not in MODEL_CLASSES:\n",
-    "        print(f\"❌ Unsupported model type: {MODEL_TYPE}\")\n",
     "        continue\n",
     "\n",
     "    if MODEL_TYPE not in experiments_cfg[\"models\"]:\n",
-    "        print(f\"❌ No experiments found for {MODEL_TYPE} in experiments_config.yml\")\n",
     "        continue\n",
     "\n",
-    "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
-    "    model_config = experiments_cfg[\"models\"][MODEL_TYPE]\n",
-    "    EXPERIMENT_LIST = model_config[\"experiments\"]\n",
+    "    EXPERIMENT_NAME = get_experiment_name_for_model(MODEL_TYPE, BASE_EXPERIMENT_NAME)\n",
+    "    mlflow.set_experiment(EXPERIMENT_NAME)\n",
     "\n",
-    "    print(f\"🔍 Running {len(EXPERIMENT_LIST)} experiments for {MODEL_TYPE}\")\n",
+    "    ModelClass = MODEL_CLASSES[MODEL_TYPE]\n",
+    "    EXPERIMENT_LIST = experiments_cfg[\"models\"][MODEL_TYPE][\"experiments\"]\n",
     "\n",
     "    for exp in EXPERIMENT_LIST:\n",
+    "\n",
     "        exp_name = f\"{RUN_NAME_PREFIX}_{MODEL_TYPE}_{exp['name']}\"\n",
     "        params = exp[\"params\"].copy()\n",
     "\n",
@@ -192,24 +180,36 @@
     "            y_pred = pipeline.predict(X_test)\n",
     "            inference_time = round(time.time() - start_inf, 4)\n",
     "\n",
-    "            y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
+    "            # ✅ SAFE predict_proba (REQUIRED CHANGE)\n",
+    "            if hasattr(pipeline.named_steps[\"model\"], \"predict_proba\"):\n",
+    "                y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
+    "            else:\n",
+    "                y_proba = None\n",
     "\n",
     "            metrics = {\n",
     "                \"test_accuracy\": accuracy_score(y_test, y_pred),\n",
     "                \"test_precision\": precision_score(y_test, y_pred),\n",
     "                \"test_recall\": recall_score(y_test, y_pred),\n",
     "                \"test_f1\": f1_score(y_test, y_pred),\n",
-    "                \"test_roc_auc\": roc_auc_score(y_test, y_proba),\n",
     "                \"train_accuracy\": train_accuracy,\n",
     "                \"train_time\": train_time,\n",
     "                \"inference_time\": inference_time\n",
     "            }\n",
     "\n",
+    "            if y_proba is not None:\n",
+    "                metrics[\"test_roc_auc\"] = roc_auc_score(y_test, y_proba)\n",
+    "\n",
     "            for k, v in metrics.items():\n",
     "                mlflow.log_metric(k, v)\n",
     "\n",
+    "            # ✅ Logistic Regression convergence metric (RECOMMENDED)\n",
+    "            model_step = pipeline.named_steps[\"model\"]\n",
+    "            if MODEL_TYPE == \"logistic_regression\" and hasattr(model_step, \"n_iter_\"):\n",
+    "                mlflow.log_metric(\"lr_n_iterations\", int(np.max(model_step.n_iter_)))\n",
+    "\n",
     "            mlflow.log_params(params)\n",
     "            mlflow.log_param(\"model_type\", MODEL_TYPE)\n",
+    "            mlflow.log_param(\"experiment_name\", EXPERIMENT_NAME)\n",
     "\n",
     "            signature = infer_signature(X_train, pipeline.predict(X_train))\n",
     "\n",
@@ -220,21 +220,7 @@
     "                input_example=X_train.head(5)\n",
     "            )\n",
     "\n",
-    "            print(f\"   ✅ {exp_name} completed\")\n",
-    "\n",
-    "    print(f\"\\n{'='*80}\")\n",
-    "    print(f\"🎉 {MODEL_TYPE.upper()} TRAINING COMPLETED!\")\n",
-    "    print(f\"{'='*80}\")\n",
-    "\n",
-    "# ==========================================\n",
-    "# 🎉 FINAL SUMMARY\n",
-    "# ==========================================\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"✅ Trained models: {', '.join(MODELS_TO_TRAIN)}\")\n",
-    "print(\"=\" * 80)\n"
+    "print(\"🎉 ALL MODELS TRAINING COMPLETED!\")\n"
    ]
   }
  ],
