fix the error in train.py

--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -55,15 +55,19 @@
     "\n",
     "# 🔥 GET MODELS TO TRAIN (Git / Job Variable)\n",
     "\n",
-    "try:\n",
-    "    MODELS_TO_TRAIN_ENV = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
-    "except:\n",
-    "    MODELS_TO_TRAIN_ENV = None\n",
+    "def get_models_to_train():\n",
+    "    try:\n",
+    "        val = dbutils.widgets.get(\"MODELS_TO_TRAIN\")\n",
+    "    except:\n",
+    "        val = os.getenv(\"MODELS_TO_TRAIN\")\n",
     "\n",
-    "if not MODELS_TO_TRAIN_ENV:\n",
-    "    raise ValueError(\"❌ MODELS_TO_TRAIN job parameter is not set\")\n",
+    "    if not val or val.lower() == \"none\":\n",
+    "        raise ValueError(\"❌ MODELS_TO_TRAIN is not set or invalid\")\n",
     "\n",
-    "MODELS_TO_TRAIN = [m.strip() for m in MODELS_TO_TRAIN_ENV.split(\",\")]\n",
+    "    return [m.strip() for m in val.split(\",\") if m.strip()]\n",
+    "\n",
+    "MODELS_TO_TRAIN = get_models_to_train()\n",
+    "\n",
     "\n",
     "# 🔥 EXPERIMENT NAME HELPER\n",
     "\n",
