--- a/dev_env/train.ipynb
+++ b/dev_env/train.ipynb
@@ -53,6 +53,16 @@
     "with open(\"experiments_config.yml\", \"r\") as f:\n",
     "    experiments_cfg = yaml.safe_load(f)\n",
     "\n",
+    "# 🔹 ENSURE WIDGET EXISTS (REQUIRED FOR DATABRICKS JOBS)\n",
+    "try:\n",
+    "    dbutils.widgets.text(\n",
+    "        \"MODELS_TO_TRAIN\",\n",
+    "        os.getenv(\"MODELS_TO_TRAIN\", \"\"),\n",
+    "        \"Models to Train\"\n",
+    "    )\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
     "# 🔥 GET MODELS TO TRAIN (Git / Job Variable)\n",
     "\n",
     "def get_models_to_train():\n",
@@ -67,7 +77,6 @@
     "    return [m.strip() for m in val.split(\",\") if m.strip()]\n",
     "\n",
     "MODELS_TO_TRAIN = get_models_to_train()\n",
-    "\n",
     "\n",
     "# 🔥 EXPERIMENT NAME HELPER\n",
     "\n",
@@ -184,7 +193,6 @@
     "            y_pred = pipeline.predict(X_test)\n",
     "            inference_time = round(time.time() - start_inf, 4)\n",
     "\n",
-    "            # ✅ SAFE predict_proba (REQUIRED CHANGE)\n",
     "            if hasattr(pipeline.named_steps[\"model\"], \"predict_proba\"):\n",
     "                y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
     "            else:\n",
@@ -206,7 +214,6 @@
     "            for k, v in metrics.items():\n",
     "                mlflow.log_metric(k, v)\n",
     "\n",
-    "            # ✅ Logistic Regression convergence metric (RECOMMENDED)\n",
     "            model_step = pipeline.named_steps[\"model\"]\n",
     "            if MODEL_TYPE == \"logistic_regression\" and hasattr(model_step, \"n_iter_\"):\n",
     "                mlflow.log_metric(\"lr_n_iterations\", int(np.max(model_step.n_iter_)))\n",
